# menderer

./: CMakeLists.txt  README.md
include/menderer/ogl/: ogl.h
src/: dataset.cpp
src/ogl/: texture.cpp
